--- a/tw/composer.json
+++ b/tw/composer.json
@@ -21,11 +21,21 @@
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
+        "classmap": [
+          "app/Library",
+          "app/Models",
+          "database"
+        ],
         "psr-4": {
             "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
+            "Database\\Seeders\\": "database/seeders/",
+            "Modules\\": "Modules/",
+            "Database\\Factories\\": "database/factories/"
+        
+        },
+        "files": [
+            "app/Library/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -59,4 +69,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true
-}
+    }
+
